--- a/src/pages/Logon/styles.css
+++ b/src/pages/Logon/styles.css
@@ -17,8 +17,10 @@
 }
 
 .logon-container section.form h1{
+
     font-size: 30px;
     color: darkviolet;
+    margin-left: 20px;
     margin-bottom: 15px;
 }
 
@@ -29,6 +31,7 @@
     border: 2px solid #dcdce6;
     border-radius: 10px;
     padding: 0 30px;
+    margin-left: 20px;
     margin-top: 8px;
 }
 
